--- a/d/de/dea/dealer.com.html
+++ b/d/de/dea/dealer.com.html
@@ -1,11 +1,13 @@
-<!--The following is the downloaded HTML source of the dealer.com privacy policy that was archived on 2013-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130527005403id_/http%3A//www.dealer.com/company/dealer-com-privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dealer.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220154507id_/http%3A//www.dealer.com/company/dealer-com-privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js no-flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" xmlns:fb="http://ogp.me/ns/fb#"><!--<![endif]--><head><script async="" src="https://munchkin.marketo.net/munchkin.js"></script>
   <meta charset="utf-8">
   <title>Dealer.com Privacy Policy | Dealer.com</title>
   <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="http://static.dealer.com/sites/d/ddcsite/images/site-favicon-default.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- Google Content Experiments Plugin Code -->
+   
   <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=486837688034327"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/vendor/modernizr-2.5.3.min.js" type="text/javascript"></script>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -42,7 +44,7 @@
 <script type="text/javascript" src="/js/main.js"></script>
 <script type="text/javascript" src="/plugins/google-analyticator/external-tracking.min.js?ver=6.4.1"></script>
 
-<!-- Bad Behavior 2.2.13 run time: 4.542 ms -->
+<!-- Bad Behavior 2.2.13 run time: 12.971 ms -->
 <script type="text/javascript">
 <!--
 function bb2_addLoadEvent(func) {
@@ -63,7 +65,7 @@ bb2_addLoadEvent(function() {
 			var myElement = document.createElement('input');
 			myElement.setAttribute('type', 'hidden');
 			myElement.name = 'bb2_screener_';
-			myElement.value = '1369616043 64.70.56.67 174.129.237.157, 184.27.45.148, 69.31.21.86';
+			myElement.value = '1387554306 10.14.1.5 174.129.237.157, 184.51.101.77, 204.2.187.79';
 			document.forms[i].appendChild(myElement);
 		}
 	}
@@ -89,9 +91,17 @@ bb2_addLoadEvent(function() {
    
  <!--[if lt IE 9]>  <link rel="stylesheet" href="/css/ie.css"> <![endif]-->
 <link href="https://plus.google.com/ 117330872588274988962" rel="publisher">
+
+<!-- Remarketing Pixel DVA Campaign -->
+<script type="text/javascript" src="//d9lq0o81skkdj.cloudfront.net/k/7l0s38/1k.js"></script>
+<script type="text/javascript" src="//d9lq0o81skkdj.cloudfront.net/k/72tfre/1k.js"></script>
+
+
 </head>
 
-<body class="page page-id-3089 page-child parent-pageid-479 page-template page-template-page-generic-php top-navbar subnav">
+
+<body class="page page-id-3089 page-child parent-pageid-479 page-template page-template-page-generic-php top-navbar subnav loaded" style="visibility: visible;">
+
 <!-- Facebook Integration --> 
   <div id="fb-root"></div>
   <script>(function(d, s, id) {
@@ -147,7 +157,11 @@ bb2_addLoadEvent(function() {
                   </div>
 </header>
   
-    <div id="wrap" class="container" role="document">  	                          <div class="hero-unit">
+    <div id="wrap" class="container" role="document">
+
+
+
+      	                          <div class="hero-unit">
             <!-- Begin Slideshow -->
       <div id="slider" class="flexslider leadership-slide-wrap">
         <div class="flexslider">
@@ -194,7 +208,7 @@ bb2_addLoadEvent(function() {
 <h1>Dealer Dot Com, Inc.: Website Privacy Policy</h1>
 <p>&nbsp;</p>
 <p>Dealer Dot Com, Inc. (“Dealer.com”) takes your privacy seriously and is committed to safeguarding your privacy online. Because we do gather certain types of information from visitors to our sites, we have developed a privacy statement to help you understand the terms and conditions surrounding the collection and use of that information. This statement discloses the types of information we gather, how it is used, and how you can gain access to and edit any data that we’ve collected about you at any time.</p>
-<p>Dealer.com has been awarded TRUSTe’s Privacy Seal signifying that this privacy policy and practices have been reviewed by TRUSTe for compliance with <span style="color: #000000;"><a href="http://www.truste.com/privacy_seals_and_services/consumer_privacy/privacy-programs-requirements.html" target="_blank"><span style="color: #000000;">TRUSTe’s program requirements</span></a></span> including transparency, accountability and choice regarding the collection and use of your personal information. The TRUSTe program covers only information that is collected through the Web site <span style="color: #000000;"><a href="http://www.dealer.com"><span style="color: #000000;">www.dealer.com</span></a></span> and does not cover information that may be collected through our mobile applications. If you have questions or complaints regarding our privacy policy or practices, please <span style="color: #000000;"><a title="Contact" href="http://vtqa-dealerdotcom01.dealer.ddc/contact/"><span style="color: #000000;">contact us here</span></a></span>. If you are not satisfied with our response you can contact<span style="color: #000000;"> <a href="http://watchdog.truste.com/pvr.php?page=complaint" target="_blank"><span style="color: #000000;">TRUSTe here</span></a></span>.</p>
+<p>Dealer.com has been awarded TRUSTe’s Privacy Seal signifying that this privacy policy and practices have been reviewed by TRUSTe for compliance with <span style="color: #000000;"><a href="http://www.truste.com/privacy_seals_and_services/consumer_privacy/privacy-programs-requirements.html" target="_blank"><span style="color: #000000;">TRUSTe’s program requirements</span></a></span> including transparency, accountability and choice regarding the collection and use of your personal information. The TRUSTe program covers only information that is collected through the Web site <span style="color: #000000;"><a href="http://www.dealer.com"><span style="color: #000000;">www.dealer.com</span></a></span> and does not cover information that may be collected through our mobile applications. If you have questions or complaints regarding our privacy policy or practices, please <span style="color: #000000;"><a title="Contact" href="/contact/"><span style="color: #000000;">contact us here</span></a></span>. If you are not satisfied with our response you can contact<span style="color: #000000;"> <a href="http://watchdog.truste.com/pvr.php?page=complaint" target="_blank"><span style="color: #000000;">TRUSTe here</span></a></span>.</p>
 <div id="dbe5ad07-8044-46cb-9307-81863ba3490b" style="margin: 20px 0;"><script src="http://privacy-policy.truste.com/privacy-seal/Dealer-Dot-Com,-Inc-/asc?rid=dbe5ad07-8044-46cb-9307-81863ba3490b" type="text/javascript"></script><a class="no-gallery" title="TRUSTe online privacy certification" href="http://privacy.truste.com/privacy-seal/Dealer-Dot-Com,-Inc-/validation?rid=e69c800e-ba11-4315-862f-329ec866c283" target="_blank"><img style="border: none;" src="http://privacy-policy.truste.com/privacy-seal/Dealer-Dot-Com,-Inc-/seal?rid=e69c800e-ba11-4315-862f-329ec866c283" alt="TRUSTe online privacy certification"></a></div>
 <p><strong>Guiding Principles:</strong></p>
 <p>Dealer.com respects the privacy of individuals who visit our Web sites, send us e-mail, or participate in features/services we offer online. Accordingly, our policy regarding online privacy has been developed using the following guiding principles:</p>
@@ -275,7 +289,6 @@ bb2_addLoadEvent(function() {
         	<nav id="nav-footer" class="span5 nav-footer" role="navigation">
             <a href="#" name="home"></a>
             <ul id="menu-footer-navigation" class="nav"><li class="menu-contact-us"><a title="Contact Us" href="/contact/">Contact Us</a></li>
-<li class="menu-home"><a title="Home" href="/">Home</a></li>
 <li class="menu-products"><a title="Products" href="/products/">Products</a></li>
 <li class="menu-support"><a title="Support" href="/support/">Support</a></li>
 <li class="menu-company current-page-ancestor"><a title="Company" href="/company/">Company</a></li>
@@ -298,7 +311,7 @@ bb2_addLoadEvent(function() {
                 <a href="http://www.dealer.com/contact" class="contact">Contact Us</a>
            </div>    
         </div>
-    </div>
+          </div>
     <div class="container">&nbsp;</div>
    <div class="container">
     	<div class="row footer_widgets">
@@ -313,7 +326,7 @@ bb2_addLoadEvent(function() {
     	<p class="copyright">Copyright © 2013 Dealer.com&nbsp;All rights reserved&nbsp;&nbsp;<span class="privacy"><a href="/company/dealer-com-privacy-policy/">Privacy Policy</a>&nbsp;|&nbsp;<a href="/company/terms-of-use/">Terms of Use</a></span></p>
     </div>
   </footer>
-    <img style="display:none;" src="/plugins/cookies-for-comments/css.php?k=d0672ec748de8b6ba73eef20f12c409e&amp;o=i&amp;t=1905304755"><script type="text/javascript" src="/plugins/prettyphoto-media/js/jquery.prettyPhoto.min.js?ver=3.1.4"></script>
+    <img style="display:none;" src="/plugins/cookies-for-comments/css.php?k=d0672ec748de8b6ba73eef20f12c409e&amp;o=i&amp;t=1619569533"><script type="text/javascript" src="/plugins/prettyphoto-media/js/jquery.prettyPhoto.min.js?ver=3.1.4"></script>
 <script type="text/javascript" src="/plugins/contact-form-7/includes/js/jquery.form.min.js?ver=3.23"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
@@ -321,14 +334,19 @@ var _wpcf7 = {"loaderUrl":"http:\/\/www.dealer.com\/wp-content\/plugins\/contact
 /* ]]> */
 </script>
 <script type="text/javascript" src="/plugins/contact-form-7/includes/js/scripts.js?ver=3.3.2"></script>
+<script type="text/javascript" src="/plugins/wp-retina-2x/js/retina.js?ver=2012.10.09"></script>
 <script type="text/javascript" src="/js/vendor/form-cookie.js"></script>
 <script type="text/javascript" src="/js/vendor/jquery.fitvids.js"></script>
+<script type="text/javascript" src="http://contentz.mkt51.net/lp/static/js/iMAWebCookie.js?7e29f616-12c999824aa-c6f842ded9e6d11c5ffebd715e129037&amp;h=www.pages05.net"></script>
 <script>
 jQuery(function($) {
 $('a[rel^="prettyPhoto"]').prettyPhoto({ overlay_gallery: false, social_tools: '<div class="twitter"><iframe allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/tweet_button.html?count=none&amp;url={location_href}" style="border:none; overflow:hidden; width:59px; height:20px;"></iframe></div><div class="facebook"><iframe src="//www.facebook.com/plugins/like.php?href={location_href}&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:50px; height:21px;" allowTransparency="true"></iframe></div>' });
 });
 </script>
-    <iframe src="/scripts/global-remarketing.html" frameborder="0" style="display:none;" class="global-script"></iframe>
+  
+  <!--google retargeting-->
+  <iframe src="/scripts/global-remarketing.html" frameborder="0" style="display:none;" class="global-script"></iframe>
+
   <!-- Marketo -->
 <script type="text/javascript">
    $.ajax({ url: document.location.protocol + '//munchkin.marketo.net/munchkin.js', dataType: 'script', cache: true, success: function() { Munchkin.init('752-HXH-858'); } });
