--- a/t/th/the/thework.com.html
+++ b/t/th/the/thework.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thework.com privacy policy that was archived on 2013-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130613224040id_/http%3A//www.thework.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thework.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220154509id_/http%3A//www.thework.com/privacy.php) for the most accurate reproduction.-->
 
 <html lang=""><head>
 <meta http-equiv="Pragma" content="no-cache">
@@ -7,7 +7,7 @@
 <meta property="og:image" content="http://www.thework.com/img/bki_logo_more_blue.png">
 
   <title>Privacy statement :: The Work of Byron Katie</title>
-    <script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0012/4913.js?439011" async="" type="text/javascript"></script><script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 
 
 
@@ -209,8 +209,8 @@ document.getElementById('wa_u').src=wa_hp+'://counter.hitslink.com/track.js';
    <style type="text/css">
    #flag-list { padding-bottom: 10px; white-space: nowrap; padding-top:3px;}
    #flag-list a { text-decoration: none; }
-   #flag-list img { height:19px; width:29px; padding-bottom: 3px;}
-   #flag-list #language { float:left; padding-right:4px; padding-bottom: 10px; width: 29px; }
+   #flag-list img { height:19px; width:28px; padding-bottom: 3px;}
+   #flag-list #language { float:left; padding-right:4px; padding-bottom: 10px; width: 28px; }
    #flag-list #caption {color: #666666; white-space:nowrap; width: 200px; text-align:left; opacity: 0; padding-bottom:2px; height: 14px;}
    </style>
 	</head>
@@ -248,11 +248,11 @@ document.getElementById('wa_u').src=wa_hp+'://counter.hitslink.com/track.js';
 <p class="topmenu"><a href="http://www.thework.com/newsroom.php">Newsroom</a></p>
 <div class="topsubmenu" style="margin-top:0px;"><a href="http://www.thework.com/newsroom.php?pg=bio">Biography</a><br>
 <a href="http://www.thework.com/newsroom.php">Press Kit</a></div>
-<p class="topmenu"><a href="http://www.storeforthework.com/">Store</a></p>
+<p class="topmenu"><a href="http://storeforthework.myshopify.com/">Store</a></p>
 <div class="topsubmenu" style="margin-top:0px;">
-<a href="http://www.storeforthework.com/category_s/3.htm">Books</a><br>
-<a href="http://www.storeforthework.com/category_s/2.htm">DVDs</a><br>
-<a href="http://www.storeforthework.com/category_s/1.htm">CDs</a><br>
+<a href="http://storeforthework.myshopify.com/collections/books">Books</a><br>
+<a href="http://storeforthework.myshopify.com/collections/dvds">DVDs</a><br>
+<a href="http://storeforthework.myshopify.com/collections/cds">CDs</a><br>
 <a href="http://www.thework-store.com/">Downloads</a></div>
 <p class="topmenu"><a href="http://www.thework.com/contact.php">Contact Us</a></p>
 <div class="topsubmenu" style="margin-top:0px;">
@@ -395,7 +395,8 @@ CERTIFICATION PROGRAM<br>
                     
 <br>
 
-    </p></td>
+    
+</p></td>
   </tr>
 
 </tbody></table>
@@ -419,7 +420,7 @@ CERTIFICATION PROGRAM<br>
 
 
 
-<a href="events.php?eid=1000063#1000063" class="event_mini" style="color:#666666; text-decoration:none;"><b>Live with Byron Katie webcast</b><br>Wed, 19 Jun 2013<br></a><a href="http://www.livewithbyronkatie.com">livewithbyronkatie.com</a>, <br><br style="font-size:7px;line-height:7px;"><a href="events.php?eid=1000017#1000017" class="event_mini" style="color:#666666; text-decoration:none;"><b>The School for The Work </b><br>Fri, 19 Jul–Sun, 28 Jul 2013<br>Bad Neuenahr, Germany</a><br><br style="font-size:7px;line-height:7px;"><a href="events.php?eid=1000053#1000053" class="event_mini" style="color:#666666; text-decoration:none;"><b>Byron Katie's Five-day Forgiveness Intensive</b><br>Sun, 6 Oct–Fri, 11 Oct 2013<br>Ojai, California</a><br><br style="font-size:7px;line-height:7px;">
+<a href="events.php?eid=1000085#1000085" class="event_mini" style="color:#666666; text-decoration:none;"><b>New Year's Mental Cleanse</b><br>Sun, 29 Dec 2013–<br>Wed, 1 Jan 2014<br>Los Angeles, California</a><br><br style="font-size:7px;line-height:7px;"><a href="events.php?eid=1000081#1000081" class="event_mini" style="color:#666666; text-decoration:none;"><b>The School for The Work</b><br>Sun, 9 Mar–Tue, 18 Mar 2014<br>Ojai, California</a><br><br style="font-size:7px;line-height:7px;"><a href="events.php?eid=1000097#1000097" class="event_mini" style="color:#666666; text-decoration:none;"><b>“Seduction of Spirit” Retreat—Discover Your Purpose and Passion: Deepak Chopra with Byron Katie</b><br>Tue, 8 Apr–Wed, 9 Apr 2014<br>Carlsbad, California</a><br><br style="font-size:7px;line-height:7px;"><a href="events.php?eid=1000114#1000114" class="event_mini" style="color:#666666; text-decoration:none;"><b>The School for The Work </b><br>Fri, 18 Jul–Sun, 27 Jul 2014<br>Bad Neuenahr, Germany</a><br><br style="font-size:7px;line-height:7px;">
   <font style=" align:left;  font-family:Verdana, Geneva, sans-serif; font-size:8pt; line-height:12pt; ">
    ► <a href="events.php">More events</a><br>
   <br style="font-size:7px;line-height:7px;">
@@ -450,7 +451,7 @@ CERTIFICATION PROGRAM<br>
 <div style="text-align:right; width:165px; margin-top:50px;  valign:top;"><a href="http://www.facebook.com/theworkofbyronkatie"><img height="35" border="0" src="http://www.thework.com/img/HOMEfb.png" style="padding-right:4px;"></a>
 <a href="http://www.twitter.com/ByronKatie"><img height="35" border="0" style="padding-right:2px;" src="http://www.thework.com/img/HOMEtwitter.png"></a>
 
-<a href="https://plus.google.com/104832041166519509853" rel="publisher"><img height="35" border="0" style="padding-top:0px; padding-left:2px;padding-right:0px;" src="http://www.thework.com/img/HOMEPGgoogle-plus.png"></a>
+<a href="https://plus.google.com/104832041166519509853?rel=author"><img height="35" border="0" style="padding-top:0px; padding-left:2px;padding-right:0px;" src="http://www.thework.com/img/HOMEPGgoogle-plus.png"></a>
 
 
 <a href="http://www.youtube.com/user/TheWorkofBK"><img height="35" border="0" style="padding-top:2px; padding-left:4px;" src="http://www.thework.com/img/HOMEyoutube.png"></a></div>
@@ -503,7 +504,7 @@ Oprah's Soul Series </a><br>
 <a href="http://www.oprah.com/spirit/Byron-Katies-Four-Questions">OPRAH.COM<br>
 Byron Katie's Four Questions</a><br>
 <br>
-<a href="http://www.realization.org/page/doc1/doc107a.htm">REALIZATION.ORG<br>
+<a href="http://mundourano.com/assets/files/005000086/entrevista.htm">REALIZATION.ORG<br>
 An Interview with Byron Katie</a><br>
 <br>
 <a href="http://www.lamag.com/features/Story.aspx?ID=1535493">LOS ANGELES MAGAZINE
@@ -529,7 +530,7 @@ Quotes from Byron Katie</a><br>
 <p class="dirsubmenu"><a href="http://www.livewithbyronkatie.com/">Live with Byron Katie</a></p>
  <p class="dirsubmenu"><a href="http://www.thework.com/theworkfoundation.php">The Work Foundation</a></p>
 <p class="dirsubmenu"> <a href="http://www.instituteforthework.com/itw/">Institute for The Work</a></p>
-<p class="dirsubmenu"> <a href="http://www.storeforthework.com/">Store for The Work</a></p>
+<p class="dirsubmenu"> <a href="http://storeforthework.myshopify.com/">Store for The Work</a></p>
 <p class="dirsubmenu"><a href="http://downloads.thework.com/">The Work Download Store</a></p>
 <p class="dirsubmenu"><a href="http://www.facebook.com/theworkofbyronkatie">Byron Katie on Facebook</a></p>
 <p class="dirsubmenu"><a href="http://twitter.com/ByronKatie">Byron Katie on Twitter</a></p>
@@ -545,7 +546,7 @@ Quotes from Byron Katie</a><br>
 </div>
 
 <div style="width:100%; background-color:#f5f5f3;">
-   <center><div style="width:986px;">
+   <center><div style="width:988px;">
    
 <div id="flag-list">
 
@@ -593,6 +594,10 @@ Quotes from Byron Katie</a><br>
       <div id="caption" lang="ko">한국의</div>
       <a href="http://www.thework.com/../korean/"><img lang="ko" src="http://www.thework.com/img/flags_fpo/south-korea-flag.png" alt="한국의   Korean" height="14" width="20" border="0"></a>
       </div>
+            <div id="language" lang="hr">
+      <div id="caption" lang="hr">HRVATSKI</div>
+      <a href="http://www.thework.com/hrvatski/"><img lang="hr" src="http://www.thework.com/img/flags_fpo/croatian-flag-small.png" alt="HRVATSKI   Croatian" height="14" width="20" border="0"></a>
+      </div>
             <div id="language" lang="it">
       <div id="caption" lang="it">ITALIANO</div>
       <a href="http://www.thework.com/italiano/"><img lang="it" src="http://www.thework.com/img/flags_fpo/italy-flag.png" alt="ITALIANO   Italian" height="14" width="20" border="0"></a>
@@ -611,7 +616,7 @@ Quotes from Byron Katie</a><br>
       </div>
             <div id="language" lang="mk">
       <div id="caption" lang="mk">македонски</div>
-      <a href="http://www.thework.com/macedonian/"><img lang="mk" src="http://www.thework.com/img/flags_fpo/macedonian-flag.png" alt="македонски   Macedonian" height="14" width="20" border="0"></a>
+      <a href="http://www.thework.com/makedonski/"><img lang="mk" src="http://www.thework.com/img/flags_fpo/macedonian-flag.png" alt="македонски   Macedonian" height="14" width="20" border="0"></a>
       </div>
             <div id="language" lang="nl">
       <div id="caption" lang="nl">NEDERLANDS</div>
@@ -678,7 +683,7 @@ Quotes from Byron Katie</a><br>
 
    </div></center><br clear="both">
 
-<div style="font-size:7pt;">© 2013 Byron Katie International, Inc. All rights reserved. <a href="http://www.thework.com/privacy.php">Privacy and Legal Statement</a>.<br>
+<div style="font-size:7pt;">© 2013 Byron Katie International, Inc. All rights reserved. <a href="http://www.thework.com/privacy.php">Privacy and Legal Statement</a><br>
 <br>
 </div>
 
@@ -697,6 +702,15 @@ $(document).ready(function () {
 
 	
 });    </script>
+
+
+
+        <script type="text/javascript">
+	   setTimeout(function(){var a=document.createElement("script");
+			var b=document.getElementsByTagName("script")[0];
+			a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0012/4913.js?"+Math.floor(new Date().getTime()/3600000);
+			a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+</script>
 
 
 
